--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 	padding: 0;
 }
 body{
-	background-image: url('images/brickwall.png');
+	background-image: url('../images/brickwall.png');
 }
 header{
 	height: 80px;
